// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots AppBar Main app bar 1`] = `
<div
  className="ButtonAppBar-root-1"
>
  <header
    className="MuiPaper-root-14 MuiPaper-shadow4-20 MuiAppBar-root-7 MuiAppBar-positionStatic-10 MuiAppBar-colorPrimary-12 ButtonAppBar-appBar-5"
  >
    <div
      className="MuiToolbar-root-41 MuiToolbar-gutters-42"
    >
      <button
        aria-label="Menu"
        className="MuiButtonBase-root-52 MuiIconButton-root-43 MuiIconButton-colorContrast-45 ButtonAppBar-menuButton-3"
        disabled={false}
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiIconButton-label-49"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-54 MuiIconButton-icon-50"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root-55"
        />
      </button>
      <h1
        className="MuiTypography-root-62 MuiTypography-headline-67 MuiTypography-colorInherit-81 ButtonAppBar-flex-2"
      >
        MIWF
      </h1>
      <div>
        <button
          aria-haspopup="true"
          aria-owns={null}
          className="MuiButtonBase-root-52 MuiIconButton-root-43 MuiIconButton-colorContrast-45"
          disabled={false}
          id="menu-appbar-button"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiIconButton-label-49"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-54 MuiIconButton-icon-50"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root-55"
          />
        </button>
      </div>
    </div>
  </header>
</div>
`;

exports[`Storyshots Cards Content card 1`] = `
<div
  className="MuiPaper-root-14 MuiPaper-shadow2-18 MuiPaper-rounded-15"
>
  <div>
    <h1>
       Content 
    </h1>
  </div>
</div>
`;

exports[`Storyshots Cards Simple card 1`] = `
<div
  className="MuiPaper-root-14 MuiPaper-shadow2-18 MuiPaper-rounded-15"
>
  <div
    className="MuiCardContent-root-95 MuiCardHeader-root-90"
  >
    <div
      className="MuiCardHeader-content-92"
    >
      <span
        className="MuiTypography-root-62 MuiTypography-headline-67 MuiCardHeader-title-93"
      >
        Title
      </span>
      <span
        className="MuiTypography-root-62 MuiTypography-body1-71 MuiTypography-colorSecondary-83 MuiCardHeader-subheader-94"
      />
    </div>
  </div>
  <div
    className="MuiCardContent-root-95"
  >
    fdsa
  </div>
</div>
`;

exports[`Storyshots Empty Data Playground 1`] = `
<div>
  No data
</div>
`;

exports[`Storyshots HighlightBox Account Total 1`] = `
<div
  className="MuiPaper-root-14 MuiPaper-shadow2-18 MuiPaper-rounded-15"
>
  <div
    className="MuiCardContent-root-95 MuiCardHeader-root-90"
  >
    <div
      className="MuiCardHeader-content-92"
    >
      <span
        className="MuiTypography-root-62 MuiTypography-headline-67 MuiCardHeader-title-93"
      >
        Account Total
      </span>
      <span
        className="MuiTypography-root-62 MuiTypography-body1-71 MuiTypography-colorSecondary-83 MuiCardHeader-subheader-94"
      />
    </div>
  </div>
  <div
    className="MuiCardContent-root-95"
  >
    <h1>
      $7,749.34
    </h1>
    <hr
      className="MuiDivider-root-346 MuiDivider-default-347"
    />
    <ul
      className="MuiList-root-351 MuiList-padding-352"
    >
      <li
        className="MuiListItem-root-355 MuiListItem-gutters-362 MuiListItem-default-358"
        disabled={false}
      >
        <div
          className="MuiListItemText-root-365"
        />
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots HighlightBox Annulized Percentage Return 1`] = `
<div
  className="MuiPaper-root-14 MuiPaper-shadow2-18 MuiPaper-rounded-15"
>
  <div
    className="MuiCardContent-root-95 MuiCardHeader-root-90"
  >
    <div
      className="MuiCardHeader-content-92"
    >
      <span
        className="MuiTypography-root-62 MuiTypography-headline-67 MuiCardHeader-title-93"
      >
        Annulized Percentage Return
      </span>
      <span
        className="MuiTypography-root-62 MuiTypography-body1-71 MuiTypography-colorSecondary-83 MuiCardHeader-subheader-94"
      />
    </div>
  </div>
  <div
    className="MuiCardContent-root-95"
  >
    <h1>
      3.75%
    </h1>
    <hr
      className="MuiDivider-root-346 MuiDivider-default-347"
    />
    <ul
      className="MuiList-root-351 MuiList-padding-352"
    >
      <li
        className="MuiListItem-root-355 MuiListItem-gutters-362 MuiListItem-default-358"
        disabled={false}
      >
        <div
          className="MuiListItemText-root-365"
        />
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots HighlightBox Playground 1`] = `
<div
  className="MuiPaper-root-14 MuiPaper-shadow2-18 MuiPaper-rounded-15"
>
  <div
    className="MuiCardContent-root-95 MuiCardHeader-root-90"
  >
    <div
      className="MuiCardHeader-content-92"
    >
      <span
        className="MuiTypography-root-62 MuiTypography-headline-67 MuiCardHeader-title-93"
      >
        Account Total
      </span>
      <span
        className="MuiTypography-root-62 MuiTypography-body1-71 MuiTypography-colorSecondary-83 MuiCardHeader-subheader-94"
      />
    </div>
  </div>
  <div
    className="MuiCardContent-root-95"
  >
    <h1>
      $1234.56
    </h1>
    <hr
      className="MuiDivider-root-346 MuiDivider-default-347"
    />
    <ul
      className="MuiList-root-351 MuiList-padding-352"
    >
      <li
        className="MuiListItem-root-355 MuiListItem-gutters-362 MuiListItem-default-358"
        disabled={false}
      >
        <div
          className="MuiListItemText-root-365"
        />
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots HighlightBox Simple 1`] = `
<div
  className="MuiPaper-root-14 MuiPaper-shadow2-18 MuiPaper-rounded-15"
>
  <div
    className="MuiCardContent-root-95 MuiCardHeader-root-90"
  >
    <div
      className="MuiCardHeader-content-92"
    >
      <span
        className="MuiTypography-root-62 MuiTypography-headline-67 MuiCardHeader-title-93"
      >
        Stuff
      </span>
      <span
        className="MuiTypography-root-62 MuiTypography-body1-71 MuiTypography-colorSecondary-83 MuiCardHeader-subheader-94"
      />
    </div>
  </div>
  <div
    className="MuiCardContent-root-95"
  >
    <h1>
      More stuff
    </h1>
    <hr
      className="MuiDivider-root-346 MuiDivider-default-347"
    />
    <ul
      className="MuiList-root-351 MuiList-padding-352"
    />
  </div>
</div>
`;

exports[`Storyshots InvestBucket Playground 1`] = `
<div
  className="MuiPaper-root-14 MuiPaper-shadow2-18 MuiPaper-rounded-15"
>
  <div
    className="MuiCardContent-root-95 MuiCardHeader-root-90"
  >
    <div
      className="MuiCardHeader-content-92"
    >
      <span
        className="MuiTypography-root-62 MuiTypography-headline-67 MuiCardHeader-title-93"
      >
        Risk 1
      </span>
      <span
        className="MuiTypography-root-62 MuiTypography-body1-71 MuiTypography-colorSecondary-83 MuiCardHeader-subheader-94"
      />
    </div>
  </div>
  <div
    className="MuiCardContent-root-95"
  >
    <ul
      className="MuiList-root-351 MuiList-padding-352"
    >
      <li
        className="MuiListItem-root-355 MuiListItem-gutters-362 MuiListItem-default-358"
        disabled={false}
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-54 MuiListItemIcon-root-370"
          focusable="false"
          onClick={[Function]}
          viewBox="0 0 24 24"
        >
          <path
            d="M16 6l2.29 2.29-4.88 4.88-4-4L2 16.59 3.41 18l6-6 4 4 6.3-6.29L22 12V6z"
          />
        </svg>
        <div
          autoFocus={true}
          className="MuiListItemText-root-365"
          onClick={[Function]}
        >
          <h3
            className="MuiTypography-root-62 MuiTypography-subheading-69 MuiListItemText-text-368"
          >
            Good to get started
          </h3>
        </div>
      </li>
      <li
        className="MuiListItem-root-355 MuiListItem-gutters-362 MuiListItem-default-358"
        disabled={false}
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-54 MuiListItemIcon-root-370"
          focusable="false"
          onClick={[Function]}
          viewBox="0 0 24 24"
        >
          <path
            d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zm2.46-7.12l1.41-1.41L12 12.59l2.12-2.12 1.41 1.41L13.41 14l2.12 2.12-1.41 1.41L12 15.41l-2.12 2.12-1.41-1.41L10.59 14l-2.13-2.12zM15.5 4l-1-1h-5l-1 1H5v2h14V4z"
          />
        </svg>
        <div
          className="MuiFormControl-root-371"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          required={false}
        >
          <div
            className="MuiInput-root-375 MuiInput-formControl-376 MuiInput-inkbar-377 MuiInput-underline-383"
            onBlur={[Function]}
            onFocus={[Function]}
          >
            <input
              autoComplete={undefined}
              autoFocus={undefined}
              className="MuiInput-input-379 MuiInput-inputSingleline-386"
              defaultValue={undefined}
              disabled={false}
              id={undefined}
              name={undefined}
              onChange={[Function]}
              onKeyDown={undefined}
              onKeyUp={undefined}
              placeholder={undefined}
              readOnly={undefined}
              required={undefined}
              rows={undefined}
              type="text"
              value="Low risk"
            />
          </div>
        </div>
      </li>
      <li
        className="MuiListItem-root-355 MuiListItem-gutters-362 MuiListItem-default-358"
        disabled={false}
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-54 MuiListItemIcon-root-370"
          focusable="false"
          onClick={[Function]}
          viewBox="0 0 24 24"
        >
          <path
            d="M16 18l2.29-2.29-4.88-4.88-4 4L2 7.41 3.41 6l6 6 4-4 6.3 6.29L22 12v6z"
          />
        </svg>
        <div
          autoFocus={true}
          className="MuiListItemText-root-365"
          onClick={[Function]}
        >
          <h3
            className="MuiTypography-root-62 MuiTypography-subheading-69 MuiListItemText-text-368"
          >
            Low reward
          </h3>
        </div>
      </li>
    </ul>
    <button
      aria-label="add"
      className="MuiButtonBase-root-52 MuiButton-root-332 MuiButton-raised-339 MuiButton-fab-345 MuiButton-raisedPrimary-341"
      disabled={false}
      id="launch-edit"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label-334"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-54"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
          />
        </svg>
      </span>
      <span
        className="MuiTouchRipple-root-55"
      />
    </button>
  </div>
  <div
    className="MuiCardActions-root-390"
  >
    <button
      className="MuiButtonBase-root-52 MuiButton-root-332 MuiButton-flatPrimary-335 MuiButton-dense-333 MuiCardActions-actionSpacing-391"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label-334"
      >
        Invest
      </span>
      <span
        className="MuiTouchRipple-root-55"
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots Loading Linear 1`] = `
<div>
  <div
    className="MuiCircularProgress-root-309 MuiCircularProgress-primaryColor-310"
    role="progressbar"
    style={
      Object {
        "height": 100,
        "width": 100,
      }
    }
  >
    <svg
      className="MuiCircularProgress-svg-312 MuiCircularProgress-indeterminateSvg-313"
      viewBox="0 0 100 100"
    >
      <circle
        className="MuiCircularProgress-circle-314 MuiCircularProgress-indeterminateCircle-315"
        cx={50}
        cy={50}
        fill="none"
        r={48.2}
        strokeMiterlimit="20"
        strokeWidth={3.6}
        style={Object {}}
      />
    </svg>
  </div>
</div>
`;

exports[`Storyshots Page Test page 1`] = `
<div>
  <div>
    <div
      className="ButtonAppBar-root-1"
    >
      <header
        className="MuiPaper-root-103 MuiPaper-shadow4-109 MuiAppBar-root-96 MuiAppBar-positionStatic-99 MuiAppBar-colorPrimary-101 ButtonAppBar-appBar-5"
      >
        <div
          className="MuiToolbar-root-130 MuiToolbar-gutters-131"
        >
          <button
            aria-label="Menu"
            className="MuiButtonBase-root-141 MuiIconButton-root-132 MuiIconButton-colorContrast-134 ButtonAppBar-menuButton-3"
            disabled={false}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiIconButton-label-138"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-143 MuiIconButton-icon-139"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
                />
              </svg>
            </span>
            <span
              className="MuiTouchRipple-root-144"
            />
          </button>
          <h1
            className="MuiTypography-root-151 MuiTypography-headline-156 MuiTypography-colorInherit-170 ButtonAppBar-flex-2"
          >
            MIWF
          </h1>
          <div>
            <button
              aria-haspopup="true"
              aria-owns={null}
              className="MuiButtonBase-root-141 MuiIconButton-root-132 MuiIconButton-colorContrast-134"
              disabled={false}
              id="menu-appbar-button"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex={0}
              type="button"
            >
              <span
                className="MuiIconButton-label-138"
              >
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root-143 MuiIconButton-icon-139"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z"
                  />
                </svg>
              </span>
              <span
                className="MuiTouchRipple-root-144"
              />
            </button>
          </div>
        </div>
      </header>
    </div>
  </div>
  <div
    style={
      Object {
        "margin": 10,
        "paddingTop": "70.5px",
      }
    }
  >
    <div
      className="MuiGrid-typeContainer-179 MuiGrid-spacing-xs-16-194"
    >
      <div
        className="MuiGrid-typeItem-180 MuiGrid-grid-xs-12-209"
      >
        <div
          className="MuiGrid-typeContainer-179 MuiGrid-spacing-xs-16-194"
        >
          <div
            className="MuiGrid-typeItem-180 MuiGrid-grid-xs-12-209 MuiGrid-grid-sm-6-216 MuiGrid-grid-md-3-226"
          >
            <div
              className="MuiPaper-root-103 MuiPaper-shadow2-107 MuiPaper-rounded-104"
            >
              <div
                className="MuiCardContent-root-267 MuiCardHeader-root-262"
              >
                <div
                  className="MuiCardHeader-content-264"
                >
                  <span
                    className="MuiTypography-root-151 MuiTypography-headline-156 MuiCardHeader-title-265"
                  >
                    Current balance
                  </span>
                  <span
                    className="MuiTypography-root-151 MuiTypography-body1-160 MuiTypography-colorSecondary-172 MuiCardHeader-subheader-266"
                  />
                </div>
              </div>
              <div
                className="MuiCardContent-root-267"
              >
                <h1>
                  $1300
                </h1>
                <hr
                  className="MuiDivider-root-268 MuiDivider-default-269"
                />
                <ul
                  className="MuiList-root-273 MuiList-padding-274"
                />
              </div>
            </div>
          </div>
          <div
            className="MuiGrid-typeItem-180 MuiGrid-grid-xs-12-209 MuiGrid-grid-sm-6-216 MuiGrid-grid-md-3-226"
          >
            <div
              className="MuiPaper-root-103 MuiPaper-shadow2-107 MuiPaper-rounded-104"
            >
              <div
                className="MuiCardContent-root-267 MuiCardHeader-root-262"
              >
                <div
                  className="MuiCardHeader-content-264"
                >
                  <span
                    className="MuiTypography-root-151 MuiTypography-headline-156 MuiCardHeader-title-265"
                  >
                    Total Income
                  </span>
                  <span
                    className="MuiTypography-root-151 MuiTypography-body1-160 MuiTypography-colorSecondary-172 MuiCardHeader-subheader-266"
                  />
                </div>
              </div>
              <div
                className="MuiCardContent-root-267"
              >
                <h1>
                  $300
                </h1>
                <hr
                  className="MuiDivider-root-268 MuiDivider-default-269"
                />
                <ul
                  className="MuiList-root-273 MuiList-padding-274"
                />
              </div>
            </div>
          </div>
          <div
            className="MuiGrid-typeItem-180 MuiGrid-grid-xs-12-209 MuiGrid-grid-sm-6-216 MuiGrid-grid-md-3-226"
          >
            <div
              className="MuiPaper-root-103 MuiPaper-shadow2-107 MuiPaper-rounded-104"
            >
              <div
                className="MuiCardContent-root-267 MuiCardHeader-root-262"
              >
                <div
                  className="MuiCardHeader-content-264"
                >
                  <span
                    className="MuiTypography-root-151 MuiTypography-headline-156 MuiCardHeader-title-265"
                  >
                    Total Expenditures
                  </span>
                  <span
                    className="MuiTypography-root-151 MuiTypography-body1-160 MuiTypography-colorSecondary-172 MuiCardHeader-subheader-266"
                  />
                </div>
              </div>
              <div
                className="MuiCardContent-root-267"
              >
                <h1>
                  $250
                </h1>
                <hr
                  className="MuiDivider-root-268 MuiDivider-default-269"
                />
                <ul
                  className="MuiList-root-273 MuiList-padding-274"
                />
              </div>
            </div>
          </div>
          <div
            className="MuiGrid-typeItem-180 MuiGrid-grid-xs-12-209 MuiGrid-grid-sm-6-216 MuiGrid-grid-md-3-226"
          >
            <div
              className="MuiPaper-root-103 MuiPaper-shadow2-107 MuiPaper-rounded-104"
            >
              <div
                className="MuiCardContent-root-267 MuiCardHeader-root-262"
              >
                <div
                  className="MuiCardHeader-content-264"
                >
                  <span
                    className="MuiTypography-root-151 MuiTypography-headline-156 MuiCardHeader-title-265"
                  >
                    Another box
                  </span>
                  <span
                    className="MuiTypography-root-151 MuiTypography-body1-160 MuiTypography-colorSecondary-172 MuiCardHeader-subheader-266"
                  />
                </div>
              </div>
              <div
                className="MuiCardContent-root-267"
              >
                <h1>
                  $1000
                </h1>
                <hr
                  className="MuiDivider-root-268 MuiDivider-default-269"
                />
                <ul
                  className="MuiList-root-273 MuiList-padding-274"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="MuiGrid-typeItem-180 MuiGrid-grid-xs-12-209"
      >
        <div
          className="MuiPaper-root-103 MuiPaper-shadow2-107 MuiPaper-rounded-104"
        >
          <div
            className="my-pretty-chart-container"
          >
            <div
              id="chart"
              style={
                Object {
                  "height": "450px",
                  "width": "100%",
                }
              }
            >
              <div>
                Rendering Chart
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="MuiGrid-typeItem-180 MuiGrid-grid-xs-12-209"
      >
        <div
          className="MuiGrid-typeContainer-179 MuiGrid-spacing-xs-16-194"
        >
          <div
            className="MuiGrid-typeItem-180 MuiGrid-grid-xs-12-209 MuiGrid-grid-sm-6-216 MuiGrid-grid-md-4-227"
          >
            <div
              className="MuiPaper-root-103 MuiPaper-shadow2-107 MuiPaper-rounded-104"
            >
              <div
                className="MuiCardContent-root-267 MuiCardHeader-root-262"
              >
                <div
                  className="MuiCardHeader-content-264"
                >
                  <span
                    className="MuiTypography-root-151 MuiTypography-headline-156 MuiCardHeader-title-265"
                  >
                    Risk 1
                  </span>
                  <span
                    className="MuiTypography-root-151 MuiTypography-body1-160 MuiTypography-colorSecondary-172 MuiCardHeader-subheader-266"
                  />
                </div>
              </div>
              <div
                className="MuiCardContent-root-267"
              >
                <ul
                  className="MuiList-root-273 MuiList-padding-274"
                >
                  <li
                    className="MuiListItem-root-277 MuiListItem-gutters-284 MuiListItem-default-280"
                    disabled={false}
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-143 MuiListItemIcon-root-287"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16 6l2.29 2.29-4.88 4.88-4-4L2 16.59 3.41 18l6-6 4 4 6.3-6.29L22 12V6z"
                      />
                    </svg>
                    <div
                      autoFocus={true}
                      className="MuiListItemText-root-288"
                    >
                      <h3
                        className="MuiTypography-root-151 MuiTypography-subheading-158 MuiListItemText-text-291"
                      >
                        Good to get started
                      </h3>
                    </div>
                  </li>
                  <li
                    className="MuiListItem-root-277 MuiListItem-gutters-284 MuiListItem-default-280"
                    disabled={false}
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-143 MuiListItemIcon-root-287"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16 6l2.29 2.29-4.88 4.88-4-4L2 16.59 3.41 18l6-6 4 4 6.3-6.29L22 12V6z"
                      />
                    </svg>
                    <div
                      autoFocus={true}
                      className="MuiListItemText-root-288"
                    >
                      <h3
                        className="MuiTypography-root-151 MuiTypography-subheading-158 MuiListItemText-text-291"
                      >
                        Low risk
                      </h3>
                    </div>
                  </li>
                  <li
                    className="MuiListItem-root-277 MuiListItem-gutters-284 MuiListItem-default-280"
                    disabled={false}
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-143 MuiListItemIcon-root-287"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16 18l2.29-2.29-4.88-4.88-4 4L2 7.41 3.41 6l6 6 4-4 6.3 6.29L22 12v6z"
                      />
                    </svg>
                    <div
                      autoFocus={true}
                      className="MuiListItemText-root-288"
                    >
                      <h3
                        className="MuiTypography-root-151 MuiTypography-subheading-158 MuiListItemText-text-291"
                      >
                        Low reward
                      </h3>
                    </div>
                  </li>
                </ul>
              </div>
              <div
                className="MuiCardActions-root-293"
              >
                <button
                  className="MuiButtonBase-root-141 MuiButton-root-295 MuiButton-flatPrimary-298 MuiButton-dense-296 MuiCardActions-actionSpacing-294"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  role="button"
                  tabIndex={0}
                  type="button"
                >
                  <span
                    className="MuiButton-label-297"
                  >
                    Invest
                  </span>
                  <span
                    className="MuiTouchRipple-root-144"
                  />
                </button>
              </div>
            </div>
          </div>
          <div
            className="MuiGrid-typeItem-180 MuiGrid-grid-xs-12-209 MuiGrid-grid-sm-6-216 MuiGrid-grid-md-4-227"
          >
            <div
              className="MuiPaper-root-103 MuiPaper-shadow2-107 MuiPaper-rounded-104"
            >
              <div
                className="MuiCardContent-root-267 MuiCardHeader-root-262"
              >
                <div
                  className="MuiCardHeader-content-264"
                >
                  <span
                    className="MuiTypography-root-151 MuiTypography-headline-156 MuiCardHeader-title-265"
                  >
                    Risk 2
                  </span>
                  <span
                    className="MuiTypography-root-151 MuiTypography-body1-160 MuiTypography-colorSecondary-172 MuiCardHeader-subheader-266"
                  />
                </div>
              </div>
              <div
                className="MuiCardContent-root-267"
              >
                <ul
                  className="MuiList-root-273 MuiList-padding-274"
                >
                  <li
                    className="MuiListItem-root-277 MuiListItem-gutters-284 MuiListItem-default-280"
                    disabled={false}
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-143 MuiListItemIcon-root-287"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16 6l2.29 2.29-4.88 4.88-4-4L2 16.59 3.41 18l6-6 4 4 6.3-6.29L22 12V6z"
                      />
                    </svg>
                    <div
                      autoFocus={true}
                      className="MuiListItemText-root-288"
                    >
                      <h3
                        className="MuiTypography-root-151 MuiTypography-subheading-158 MuiListItemText-text-291"
                      >
                        Allows you to take more risk
                      </h3>
                    </div>
                  </li>
                  <li
                    className="MuiListItem-root-277 MuiListItem-gutters-284 MuiListItem-default-280"
                    disabled={false}
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-143 MuiListItemIcon-root-287"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16 6l2.29 2.29-4.88 4.88-4-4L2 16.59 3.41 18l6-6 4 4 6.3-6.29L22 12V6z"
                      />
                    </svg>
                    <div
                      autoFocus={true}
                      className="MuiListItemText-root-288"
                    >
                      <h3
                        className="MuiTypography-root-151 MuiTypography-subheading-158 MuiListItemText-text-291"
                      >
                        Pays significant rewards
                      </h3>
                    </div>
                  </li>
                  <li
                    className="MuiListItem-root-277 MuiListItem-gutters-284 MuiListItem-default-280"
                    disabled={false}
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-143 MuiListItemIcon-root-287"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16 18l2.29-2.29-4.88-4.88-4 4L2 7.41 3.41 6l6 6 4-4 6.3 6.29L22 12v6z"
                      />
                    </svg>
                    <div
                      autoFocus={true}
                      className="MuiListItemText-root-288"
                    >
                      <h3
                        className="MuiTypography-root-151 MuiTypography-subheading-158 MuiListItemText-text-291"
                      >
                        You might lose some money
                      </h3>
                    </div>
                  </li>
                </ul>
              </div>
              <div
                className="MuiCardActions-root-293"
              >
                <button
                  className="MuiButtonBase-root-141 MuiButton-root-295 MuiButton-flatPrimary-298 MuiButton-dense-296 MuiCardActions-actionSpacing-294"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  role="button"
                  tabIndex={0}
                  type="button"
                >
                  <span
                    className="MuiButton-label-297"
                  >
                    Invest
                  </span>
                  <span
                    className="MuiTouchRipple-root-144"
                  />
                </button>
              </div>
            </div>
          </div>
          <div
            className="MuiGrid-typeItem-180 MuiGrid-grid-xs-12-209 MuiGrid-grid-sm-6-216 MuiGrid-grid-md-4-227"
          >
            <div
              className="MuiPaper-root-103 MuiPaper-shadow2-107 MuiPaper-rounded-104"
            >
              <div
                className="MuiCardContent-root-267 MuiCardHeader-root-262"
              >
                <div
                  className="MuiCardHeader-content-264"
                >
                  <span
                    className="MuiTypography-root-151 MuiTypography-headline-156 MuiCardHeader-title-265"
                  >
                    Risk 3
                  </span>
                  <span
                    className="MuiTypography-root-151 MuiTypography-body1-160 MuiTypography-colorSecondary-172 MuiCardHeader-subheader-266"
                  />
                </div>
              </div>
              <div
                className="MuiCardContent-root-267"
              >
                <ul
                  className="MuiList-root-273 MuiList-padding-274"
                >
                  <li
                    className="MuiListItem-root-277 MuiListItem-gutters-284 MuiListItem-default-280"
                    disabled={false}
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-143 MuiListItemIcon-root-287"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16 6l2.29 2.29-4.88 4.88-4-4L2 16.59 3.41 18l6-6 4 4 6.3-6.29L22 12V6z"
                      />
                    </svg>
                    <div
                      autoFocus={true}
                      className="MuiListItemText-root-288"
                    >
                      <h3
                        className="MuiTypography-root-151 MuiTypography-subheading-158 MuiListItemText-text-291"
                      >
                        $$$
                      </h3>
                    </div>
                  </li>
                  <li
                    className="MuiListItem-root-277 MuiListItem-gutters-284 MuiListItem-default-280"
                    disabled={false}
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-143 MuiListItemIcon-root-287"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16 6l2.29 2.29-4.88 4.88-4-4L2 16.59 3.41 18l6-6 4 4 6.3-6.29L22 12V6z"
                      />
                    </svg>
                    <div
                      autoFocus={true}
                      className="MuiListItemText-root-288"
                    >
                      <h3
                        className="MuiTypography-root-151 MuiTypography-subheading-158 MuiListItemText-text-291"
                      >
                        More $$$
                      </h3>
                    </div>
                  </li>
                  <li
                    className="MuiListItem-root-277 MuiListItem-gutters-284 MuiListItem-default-280"
                    disabled={false}
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-143 MuiListItemIcon-root-287"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16 18l2.29-2.29-4.88-4.88-4 4L2 7.41 3.41 6l6 6 4-4 6.3 6.29L22 12v6z"
                      />
                    </svg>
                    <div
                      autoFocus={true}
                      className="MuiListItemText-root-288"
                    >
                      <h3
                        className="MuiTypography-root-151 MuiTypography-subheading-158 MuiListItemText-text-291"
                      >
                        You're fucking insane of you invest in this
                      </h3>
                    </div>
                  </li>
                </ul>
              </div>
              <div
                className="MuiCardActions-root-293"
              >
                <button
                  className="MuiButtonBase-root-141 MuiButton-root-295 MuiButton-flatPrimary-298 MuiButton-dense-296 MuiCardActions-actionSpacing-294"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  role="button"
                  tabIndex={0}
                  type="button"
                >
                  <span
                    className="MuiButton-label-297"
                  >
                    Invest
                  </span>
                  <span
                    className="MuiTouchRipple-root-144"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Saldo Playground 1`] = `
<div
  className="MuiPaper-root-14 MuiPaper-shadow2-18 MuiPaper-rounded-15"
>
  <div
    className="MuiCardContent-root-95 MuiCardHeader-root-90"
  >
    <div
      className="MuiCardHeader-content-92"
    >
      <span
        className="MuiTypography-root-62 MuiTypography-headline-67 MuiCardHeader-title-93"
      >
        Saldo
      </span>
      <span
        className="MuiTypography-root-62 MuiTypography-body1-71 MuiTypography-colorSecondary-83 MuiCardHeader-subheader-94"
      />
    </div>
  </div>
  <div
    className="MuiCardContent-root-95"
  >
    <table
      className="MuiTable-root-317"
    >
      <tbody
        className="MuiTableBody-root-318"
      >
        <tr
          className="MuiTableRow-root-319"
        >
          <td
            className="MuiTableCell-root-325 withStyles-TableCell--root-324 MuiTableCell-paddingDefault-328"
          >
            investedSharesValue
          </td>
          <td
            className="MuiTableCell-root-325 withStyles-TableCell--root-324 MuiTableCell-paddingDefault-328"
            style={
              Object {
                "textAlign": "right",
              }
            }
          >
            $700.00
          </td>
        </tr>
        <tr
          className="MuiTableRow-root-319"
        >
          <td
            className="MuiTableCell-root-325 withStyles-TableCell--root-324 MuiTableCell-paddingDefault-328"
          >
            earnedSharesValue
          </td>
          <td
            className="MuiTableCell-root-325 withStyles-TableCell--root-324 MuiTableCell-paddingDefault-328"
            style={
              Object {
                "textAlign": "right",
              }
            }
          >
            $74.93
          </td>
        </tr>
        <tr
          className="MuiTableRow-root-319"
        >
          <td
            className="MuiTableCell-root-325 withStyles-TableCell--root-324 MuiTableCell-paddingDefault-328"
          >
            bonusSharesValue
          </td>
          <td
            className="MuiTableCell-root-325 withStyles-TableCell--root-324 MuiTableCell-paddingDefault-328"
            style={
              Object {
                "textAlign": "right",
              }
            }
          >
            $0.00
          </td>
        </tr>
        <tr
          className="MuiTableRow-root-319"
        >
          <td
            className="MuiTableCell-root-325 MuiTableCell-paddingDefault-328"
          >
            reinvestedSharesValue
          </td>
          <td
            className="MuiTableCell-root-325 MuiTableCell-paddingDefault-328"
            style={
              Object {
                "textAlign": "right",
              }
            }
          >
            $0.00
          </td>
        </tr>
        <tr
          className="MuiTableRow-root-319"
        >
          <td
            className="MuiTableCell-root-325 withStyles-TableCell--root-324 MuiTableCell-paddingDefault-328"
          >
            totalSharesValue
          </td>
          <td
            className="MuiTableCell-root-325 withStyles-TableCell--root-324 MuiTableCell-paddingDefault-328"
            style={
              Object {
                "textAlign": "right",
              }
            }
          >
            $774.93
          </td>
        </tr>
      </tbody>
    </table>
    <button
      className="MuiButtonBase-root-52 MuiButton-root-332 MuiButton-raised-339"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label-334"
      >
        Sell Shares
      </span>
      <span
        className="MuiTouchRipple-root-55"
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots Saldo Without total 1`] = `
<div
  className="MuiPaper-root-14 MuiPaper-shadow2-18 MuiPaper-rounded-15"
>
  <div
    className="MuiCardContent-root-95 MuiCardHeader-root-90"
  >
    <div
      className="MuiCardHeader-content-92"
    >
      <span
        className="MuiTypography-root-62 MuiTypography-headline-67 MuiCardHeader-title-93"
      >
        Saldo
      </span>
      <span
        className="MuiTypography-root-62 MuiTypography-body1-71 MuiTypography-colorSecondary-83 MuiCardHeader-subheader-94"
      />
    </div>
  </div>
  <div
    className="MuiCardContent-root-95"
  >
    <table
      className="MuiTable-root-317"
    >
      <tbody
        className="MuiTableBody-root-318"
      >
        <tr
          className="MuiTableRow-root-319"
        >
          <td
            className="MuiTableCell-root-325 withStyles-TableCell--root-324 MuiTableCell-paddingDefault-328"
          >
            investedSharesValue
          </td>
          <td
            className="MuiTableCell-root-325 withStyles-TableCell--root-324 MuiTableCell-paddingDefault-328"
            style={
              Object {
                "textAlign": "right",
              }
            }
          >
            $700.00
          </td>
        </tr>
        <tr
          className="MuiTableRow-root-319"
        >
          <td
            className="MuiTableCell-root-325 withStyles-TableCell--root-324 MuiTableCell-paddingDefault-328"
          >
            earnedSharesValue
          </td>
          <td
            className="MuiTableCell-root-325 withStyles-TableCell--root-324 MuiTableCell-paddingDefault-328"
            style={
              Object {
                "textAlign": "right",
              }
            }
          >
            $74.93
          </td>
        </tr>
        <tr
          className="MuiTableRow-root-319"
        >
          <td
            className="MuiTableCell-root-325 withStyles-TableCell--root-324 MuiTableCell-paddingDefault-328"
          >
            bonusSharesValue
          </td>
          <td
            className="MuiTableCell-root-325 withStyles-TableCell--root-324 MuiTableCell-paddingDefault-328"
            style={
              Object {
                "textAlign": "right",
              }
            }
          >
            $0.00
          </td>
        </tr>
        <tr
          className="MuiTableRow-root-319"
        >
          <td
            className="MuiTableCell-root-325 MuiTableCell-paddingDefault-328"
          >
            reinvestedSharesValue
          </td>
          <td
            className="MuiTableCell-root-325 MuiTableCell-paddingDefault-328"
            style={
              Object {
                "textAlign": "right",
              }
            }
          >
            $0.00
          </td>
        </tr>
      </tbody>
    </table>
    <button
      className="MuiButtonBase-root-52 MuiButton-root-332 MuiButton-raised-339"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label-334"
      >
        Sell Shares
      </span>
      <span
        className="MuiTouchRipple-root-55"
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots Simple Percent Playground 1`] = `
<div
  className="my-pretty-chart-container"
>
  <div
    id="chart"
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  >
    <div>
      Rendering Chart
    </div>
  </div>
</div>
`;

exports[`Storyshots StockGraph Playground 1`] = `
<div
  className="my-pretty-chart-container"
>
  <div
    id="chart"
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  >
    <div>
      Rendering Chart
    </div>
  </div>
</div>
`;
